<resources>
    <string name="app_name">Proximity Service</string>
    <string name="launcher_name">P. Service</string>
    <string name="notification_settings">Service active. Tap to modify settings.</string>
    <string name="notification_running">Touch to stop service.</string>
    <string name="notification_stopped">Touch to restart service or swipe to dismiss.</string>
    <string name="notification_action_settings">Settings</string>
    <string name="notification_action_stop">Stop</string>
    <string name="settings_subheader">Settings</string>
    <string name="settings_operational_mode_title">Operational mode</string>
    <string name="settings_operational_mode_secondary_default">Proximity Sensor WakeLock (default)</string>
    <string name="settings_operational_mode_secondary_amoled_wakelock">AMOLED WakeLock</string>
    <string name="settings_operational_mode_secondary_amoled_no_wakelock">AMOLED No WakeLock</string>
    <string name="settings_operational_mode_description">The default option uses the same mechanism to turn the display off as during phone calls. The AMOLED options are only useful on devices with AMOLED screens and can be selected with or without a WakeLock. The WakeLock disables screen timeout as long as the display is being turned off with the proximity sensor.</string>
    <string name="settings_notification_behavior_title">Notification behavior</string>
    <string name="settings_notification_behavior_secondary_dismiss">Stop and dismiss</string>
    <string name="settings_notification_behavior_secondary_retain">Stop and retain</string>
    <string name="settings_notification_behavior_description">Select whether to dismiss or retain the Proximity Service notification when stopping the service.</string>
    <string name="settings_service_mode">Service mode</string>
    <string name="settings_service_mode_secondary">Proximity sensor wakelock</string>
    <string name="condition_inactive">Service is inactive</string>
    <string name="condition_active">Service is active</string>
    <string name="button_on">Turn on</string>
    <string name="button_off">Turn off</string>
    <string name="shortcut_label">Settings</string>
    <string name="dismiss">Dismiss</string>
    <string name="retain">Retain</string>
    <string name="settings_screen_off_delay_title">Screen off delay</string>
    <string name="screen_off_delay_zero">None</string>
    <string name="screen_off_delay_zero_half">0.5 seconds</string>
    <string name="screen_off_delay_one">1 second</string>
    <string name="screen_off_delay_one_half">1.5 seconds</string>
    <string name="screen_off_delay_two">2 seconds</string>
    <string name="screen_off_delay_two_half">2.5 seconds</string>
    <string name="screen_off_delay_three">3 seconds</string>
    <string name="open_source_licenses">Open source licenses</string>
    <string name="service_state_notification_channel">Service State</string>
</resources>
