<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/condition_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/primaryLight"
            android:elevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="32dp"
                    android:tint="?android:attr/textColorPrimaryInverse"
                    android:src="@drawable/ic_screen_lock_portrait_white_24dp" />

                <TextView
                    android:id="@+id/tv_condition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="?android:attr/textColorPrimaryInverse"
                    android:text="@string/condition_inactive" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="72dp"
                android:paddingStart="72dp"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/white" />

                <Button
                    android:id="@+id/btn_service_on"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:alpha=".8"
                    android:textAlignment="viewStart"
                    android:textColor="?android:attr/textColorPrimaryInverse"
                    android:text="@string/button_on"
                    style="?android:attr/buttonBarButtonStyle"/>

                <Button
                    android:id="@+id/btn_service_off"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:visibility="gone"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:alpha=".8"
                    android:textAlignment="viewStart"
                    android:textColor="?android:attr/textColorPrimaryInverse"
                    android:text="@string/button_off"
                    style="?android:attr/buttonBarButtonStyle"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/service_mode"
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_two_line_height"
            android:gravity="center"
            android:paddingStart="@dimen/default_padding"
            android:paddingEnd="@dimen/default_padding"
            android:paddingTop="@dimen/half_padding"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textColor="?android:textColorPrimary"
                android:textSize="@dimen/list_primary_text"
                android:text="@string/settings_service_mode" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textSize="@dimen/list_secondary_text"
                android:text="@string/settings_service_mode_secondary" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dividerBlack" />

        <LinearLayout
            android:id="@+id/notification"
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_two_line_height"
            android:gravity="center"
            android:paddingStart="@dimen/default_padding"
            android:paddingEnd="@dimen/default_padding"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textColor="?android:textColorPrimary"
                android:textSize="@dimen/list_primary_text"
                android:text="@string/settings_notification" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textSize="@dimen/list_secondary_text"
                android:text="@string/settings_notification_secondary" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
